# cszb-scoreboard

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DefaultCMakeSettings.json  Dockerfile  Dockerfile.code_clean  Dockerfile.osxcross  Dockerfile.standard  Jenkinsfile  LICENSE  README.md  config.proto  image_library.proto  slide_show.proto  team_library.proto  vcpkg-configuration.json  vcpkg.json  version_info.proto
.agents/: AGENTS.md
.devcontainer/: devcontainer.json
.github/workflows/: auto-update.yml  rebuild-docker.yml  scoreboard-coverage.yml  scoreboard.yml
autoupdate_server/: .dockerignore  CMakeLists.txt  CMakeSettings.json  Dockerfile  autoupdate.proto  docker_compose_debug.yml  package-lock.json  package.json
autoupdate_server/app/: .gitignore  README.md  autoupdater.pl  build.ts  jest.config.ts  package-lock.json  package.json  tsconfig.json
autoupdate_server/app/CszbScoreboard/: Config.pm  ReleaseLibrary.pm  UpdaterAPI.pm
autoupdate_server/app/spec/support/: apiCb.ts
autoupdate_server/app/spec/tests/: users.spec.ts  version.spec.ts
autoupdate_server/app/spec/types/: misc.ts
autoupdate_server/app/src/: server.ts
autoupdate_server/app/src/constants/: Filesystem.ts  Paths.ts
autoupdate_server/app/src/models/: User.ts  Version.test.ts  Version.ts  VersionHelper.test.ts  VersionHelper.ts
autoupdate_server/app/src/proto/: version_info.proto
autoupdate_server/app/src/repos/: VersionRepo.test.ts  VersionRepo.ts
autoupdate_server/app/src/routes/: VersionRoutes.ts  api.ts
autoupdate_server/app/src/services/: VersionService.ts
autoupdate_server/cmake/: VcpkgCMakeUtils.cmake  dev_settings.cmake  osxcross.cmake
autoupdate_server/cmake/cmake/: clang-format.cmake  winmsvc.cmake
autoupdate_server/cmake/modules/: Findcppcheck.cpp
autoupdate_server/etc/scripts/: docker_dependencies.pl  docker_packages.sh
autoupdate_server/src/: updater.cpp
autoupdate_server/testdata/releases/1.0.1/macos/: dummy_update_file
autoupdate_server_perl/: Dockerfile  docker_compose_debug.yml
autoupdate_server_perl/app/: autoupdater.pl
autoupdate_server_perl/app/CszbScoreboard/: Config.pm  UpdaterAPI.pm
cmake/: VcpkgCMakeUtils.cmake  clang-format.cmake  osxcross.cmake  winmsvc.cmake
cmake/modules/: CodeCoverage.cmake
cmake/presets/: Linux.json  MacOS.json  Windows.json
doc/: developers.md  kiosk_setup.md  users.md
etc/: valgrind_suppressions.supp
etc/docker/: entrypoint.sh  supervisord.conf  vnc_config
etc/external_settings/: README.md  WxWidgetSettings.json  WxWidgetsCMakePresets.json
etc/github_actions/: run_automated_tests.sh  run_coverage_tests.sh
etc/scripts/: .perltidy  Docker.pm  GitHub.pm  build_docker.sh  build_osxcross.pl  clean_code.pl  coverage.sh  docker_dependencies.pl  docker_packages.sh  install_perl_deps.sh  osx_resume_vm.sh  osx_start_vm.sh  osx_vm_copy_scoreboard.sh  osxcross_build_release.pl  release.pl  release_osxcross.pl  setup_osxcross_build.pl
include/: DisplayConfig.h  ScoreboardCommon.h  cszb-scoreboard.h
include/config/: CommandArgs.h  DisplayConfig.h  GeneralConfig.h  ImageLibrary.h  Persistence.h  Position.h  SlideShow.h  TeamConfig.h
include/config/swx/: Image.h  README.md  accel.h  clipbrd.h  defs.h  event.h  image.h
include/ui/: BackgroundImage.h  Color.h  FrameList.h  MainView.h  ScreenPresenter.h  ScreenPreview.h  ScreenSide.h  ScreenText.h  TextEntry.h  UiUtil.h
include/ui/component/: ControlPanel.h  Menu.h  PreviewPanel.h  QuickStatePanel.h  ScreenPresenter.h  ScreenPreview.h  ScreenText.h  ScreenTextController.h  ScreenTextSide.h  ScreenThumbnail.h  TextEntry.h
include/ui/dialog/: EditImageLibraryDialog.h  SettingsDialog.h  TeamLibraryDialog.h
include/ui/event/: AutoRefreshTimer.h  LibraryScanTimer.h  UpdateTimer.h
include/ui/frame/: FrameList.h  FrameManager.h  HotkeyTable.h  MainView.h
include/ui/graphics/: BackgroundImage.h  Color.h  TeamColors.h
include/ui/swx/: Frame.h  README.md
include/ui/widget/: Animation.h  Browser.h  Button.h  Canvas.h  CheckBox.h  ColorPicker.h  DirectoryPicker.h  Display.h  Divider.h  DragAndDropHandler.h  DraggablePanel.h  DropDown.h  FilePicker.h  Frame.h  Image.h  IndicatorButton.h  Label.h  LabelledArea.h  ListBox.h  MultiWidgetPanel.h  Notebook.h  Panel.h  PersistentTimer.h  PopUp.h  Radio.h  RadioButton.h  RenderContext.h  ScrollingPanel.h  SearchBox.h  TabbedDialog.h  Text.h  Timer.h  Toggle.h  Widget.h
include/util/: AutoUpdate.h  Base64.h  Clipboard.h  FilesystemPath.h  FontUtil.h  HttpReader.h  Log.h  ProtoUtil.h  Singleton.h  StringUtil.h  TimerManager.h
jenkins_agent/: Dockerfile  test_pod.json
osx_tarballs/: README
proto/: config.proto
resources/: scoreboard.icns  scoreboard.rc
resources/app_package/: scoreboard.sh
src/: cszb-scoreboard.cpp  dialog-test.cpp
src/config/: CommandArgs.cpp  DisplayConfig.cpp  GeneralConfig.cpp  ImageLibrary.cpp  Persistence.cpp  Position.cpp  SlideShow.cpp  TeamConfig.cpp
src/config/swx/: image.cpp
src/ui/: BackgroundImage.cpp  Color.cpp  FrameList.cpp  MainView.cpp  ScreenPresenter.cpp  ScreenPreview.cpp  ScreenText.cpp  TextEntry.cpp  UiUtil.cpp
src/ui/component/: ControlPanel.cpp  PreviewPanel.cpp  QuickStatePanel.cpp  ScreenPresenter.cpp  ScreenPreview.cpp  ScreenText.cpp  ScreenTextController.cpp  ScreenTextSide.cpp  ScreenThumbnail.cpp  TextEntry.cpp
src/ui/event/: UpdateTimer.cpp  (+2 more)
src/util/: AutoUpdate.cpp  Base64.cpp  FilesystemPath.cpp  FontUtil.cpp  HttpReader.cpp  ProtoUtil.cpp  Singleton.cpp  StringUtil.cpp  TimerManager.cpp
test/: AutoUpdateTest.cpp  CommandArgsTest.cpp  DisplayConfigTest.cpp  GuiTest.cpp  GuiTest.h  ImageLibraryTest.cpp  ProtoUtilTest.cpp  ScreenPreviewTest.cpp  ScreenTextSideTest.cpp  TestUtil.cpp  TestUtil.h  TextEntryTest.cpp
test/integration/: GuiTest.cpp  GuiTest.h  ScoreControlTest.cpp  ScreenPreviewTest.cpp  ScreenTextSideTest.cpp  TextEntryTest.cpp  ThingsModeTest.cpp
test/mocks/: MockPersistence.h  Stubs.h
test/util/: TempFilesystem.h
(+162 files in other folders)
